--- a/style.css
+++ b/style.css
@@ -1,1 +1,128 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
+
+* {
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+    line-height: 18px;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background: #E5E5E5;
+}
+
+.container {
+    width: 375px;
+    background: #F4F4F4;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+header {
+    background-color: #1B83E2;
+    height: 66px;
+}
+
+h1 {
+    font-size: 24px;
+    text-align: center;
+    padding-top: 24px;
+    color: #F4F4F4;
+}
+
+main {
+    padding: 24px;
+}
+
+label {
+    font-size: 14px;
+    color: #777777;
+}
+
+select {
+    background: #FFFFFF;
+    border: 1px solid #BBBBBB;
+    border-radius: 4px;
+    height: 48px;
+    width: 100%;
+    display: block;
+    cursor: pointer;
+    outline: none;
+    appearance: none;
+    padding: 16px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    margin-top: 6px;
+    margin-bottom: 24px;
+    color: #555555;
+    
+    
+}
+
+input {
+    background: #FFFFFF;
+    border: 1px solid #BBBBBB;
+    border-radius: 4px;
+    height: 48px;
+    width: 100%;
+    display: block;
+    outline: none;
+    appearance: none;
+    padding: 16px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    margin-top: 6px;
+    margin-bottom: 24px;
+    font-size: 17px;
+}
+
+button {
+    background: #1B83E2;
+    border-radius: 25px;
+    margin-top: 20px;
+    margin-bottom: 36px;
+    height: 48px;
+    cursor: pointer;
+    border: none;
+    width: 100%;
+    font-weight: bold;
+    font-size: 16px;
+    color: #F4F4F4;
+}
+
+button:hover {
+    opacity: 0.9;
+}
+
+button:active {
+    opacity: 0.7;
+}
+
+section {
+    border: 1px solid #1B83E2;
+    border-radius: 4px;
+    /* margin-top: 54px; */
+}
+
+.currency-container {
+    text-align: center;
+    padding: 10px;
+}
+
+.currency-name {
+    font-size: 14px;
+    color: #777777;
+}
+
+.currency-value {
+    font-weight: bold;
+    font-size: 20px;
+    color: #1B83E2;
+}
+
+.arrow-img {
+    margin: 15px auto;
+    display: block;
+}
+
+
