--- a/style.css
+++ b/style.css
@@ -17,11 +17,14 @@ body {
     width: 375px;
     background: #F4F4F4;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 70px;
+    border-radius: 10px;
 }
 
 header {
     background-color: #1B83E2;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     height: 66px;
 }
 
