--- a/style.css
+++ b/style.css
@@ -11,13 +11,15 @@
 
 body {
     background: #E5E5E5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .container {
     width: 375px;
     background: #F4F4F4;
-    margin: 0 auto;
-    margin-top: 70px;
     border-radius: 10px;
 }
 
@@ -26,12 +28,13 @@ header {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
     font-size: 24px;
-    text-align: center;
-    padding-top: 24px;
     color: #F4F4F4;
 }
 
@@ -79,6 +82,10 @@ input {
     font-size: 17px;
 }
 
+input::placeholder {
+    opacity: 0.4;
+}
+
 button {
     background: #1B83E2;
     border-radius: 25px;
@@ -104,12 +111,18 @@ button:active {
 section {
     border: 1px solid #1B83E2;
     border-radius: 4px;
-    /* margin-top: 54px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
 }
 
 .currency-container {
-    text-align: center;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
 }
 
 .currency-name {
@@ -124,8 +137,6 @@ section {
 }
 
 .arrow-img {
-    margin: 15px auto;
-    display: block;
 }
 
 
